--- a/src/View/FreeconfFlask/templates/package/buttons.html
+++ b/src/View/FreeconfFlask/templates/package/buttons.html
@@ -1,7 +1,19 @@
 <nav class="package_menu">
-    <button type="button" class="btn btn-default btn-block btn-lg" id="undo">Undo</button>
-    <button type="button" class="btn btn-default btn-block btn-lg" id="redo">Redu</button>
+    <button type="button" class="btn btn-default btn-block btn-lg" id="undo">
+        <span class="glyphicon glyphicon-arrow-left"></span>
+        Undo
+    </button>
+    <button type="button" class="btn btn-default btn-block btn-lg" id="redo">
+        <span class="glyphicon glyphicon-arrow-right"></span>
+        Redu
+    </button>
 
-    <button type="button" class="btn btn-default btn-block btn-lg" id="save_config">Save config</button>
-    <button type="button" class="btn btn-default btn-block btn-lg" id="save_native">Save native</button>
+    <button type="button" class="btn btn-default btn-block btn-lg" id="save_config">
+        <span class="glyphicon glyphicon-floppy-disk"></span>
+        Save config
+    </button>
+    <button type="button" class="btn btn-default btn-block btn-lg" id="save_native">
+        <span class="glyphicon glyphicon-floppy-save"></span>
+        Save native
+    </button>
 </nav>
