multiple container oba způsoby zobrazení

--- a/src/View/FreeconfFlask/templates/package/entries/multiple_cont.html
+++ b/src/View/FreeconfFlask/templates/package/entries/multiple_cont.html
@@ -1,5 +1,21 @@
 {% extends "package/entries/multiple.html" %}
 
 {% block item %}
-    <button type="button" class="modal_button btn btn-block {{'btn-danger' if entry[3] else 'btn-primary'}}" data-target="#Modal_{{ name }}_{{ entry[0] }}" full_name="{{ entry[2] }}">{{ entry[1] }}</button>
+
+<div class="btn-group">
+    <button type="button"
+            class="collapse_button btn {{'btn-danger' if entry[3] else 'btn-primary'}}"
+            data-target="#Collapse_{{ name }}_{{ entry[0] }}"
+            full_name="{{ entry[2] }}">
+        <span class="glyphicon glyphicon-menu-down"></span>
+        {{ entry[1] }}
+        <span class="glyphicon glyphicon-menu-down"></span>
+    </button>
+    <button type="button"
+            class="modal_button btn {{'btn-danger' if entry[3] else 'btn-primary'}}"
+            data-target="#Modal_{{ name }}_{{ entry[0] }}"
+            full_name="{{ entry[2] }}">
+        <span class="glyphicon glyphicon-new-window"></span>
+    </button>
+</div>
 {% endblock %}
