zavírání modal a collapse

--- a/src/View/FreeconfFlask/templates/elements/collapse.html
+++ b/src/View/FreeconfFlask/templates/elements/collapse.html
@@ -1,4 +1,4 @@
-<div class="collapse" id="Collapse_{{ name }}_{{ index }}"  full_name="{{ full_name }}">
+<div class="collapse" id="Collapse_{{ full_name }}"  full_name="{{ full_name }}">
             <div class="collapse-body">
                 {{ content|safe }}
             </div>
