--- a/src/View/FreeconfFlask/templates/index.html
+++ b/src/View/FreeconfFlask/templates/index.html
@@ -21,7 +21,7 @@
     </script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/socket.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/form.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/modal.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/modal_collapse.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
 
 
