--- a/src/View/FreeconfFlask/templates/nav.html
+++ b/src/View/FreeconfFlask/templates/nav.html
@@ -8,15 +8,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('index') }}"><img
-                        src="{{ url_for('static', filename='img/ico.png') }}"></a>
+                <img id="Logo" class="navbar-brand" src="{{ url_for('static', filename='img/ico.png') }}">
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
 
                     <li><a href="{{ url_for('configure') }}">Configure</a></li>
                     <li class="dropdown">
-                        <a class=" dropdown-toggle" data-toggle="dropdown" href="#">Freeconf<span
+                        <a class=" dropdown-toggle" data-toggle="dropdown" href="{{ url_for('index') }}">Freeconf<span
                                 class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="{{ url_for('setting') }}">Setting</a></li>
