--- a/src/View/FreeconfFlask/templates/nav.html
+++ b/src/View/FreeconfFlask/templates/nav.html
@@ -15,8 +15,9 @@
 
                     <li><a href="{{ url_for('configure') }}">Configure</a></li>
                     <li class="dropdown">
-                        <a class=" dropdown-toggle" data-toggle="dropdown" href="{{ url_for('index') }}">Freeconf<span
-                                class="caret"></span></a>
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Freeconf<span class="caret"></span>
+                        </a>
                         <ul class="dropdown-menu">
                             <li><a href="{{ url_for('setting') }}">Setting</a></li>
                             <li><a href="{{ url_for('about') }}">About</a></li>
