--- a/src/View/FreeconfFlask/templates/package/buttons.html
+++ b/src/View/FreeconfFlask/templates/package/buttons.html
@@ -8,11 +8,13 @@
         Redu
     </button>
 
-    <button type="button" class="btn btn-default btn-block btn-lg" id="save_config">
+    <button type="button" class="btn btn-default btn-block btn-lg"
+            id="save_config">
         <span class="glyphicon glyphicon-floppy-disk"></span>
         Save config
     </button>
-    <button type="button" class="btn btn-default btn-block btn-lg" id="save_native">
+    <button type="button" class="btn btn-default btn-block btn-lg"
+            id="save_native">
         <span class="glyphicon glyphicon-floppy-save"></span>
         Save native
     </button>
