--- a/src/View/FreeconfFlask/templates/elements/collapse.html
+++ b/src/View/FreeconfFlask/templates/elements/collapse.html
@@ -1,5 +1,6 @@
-<div class="collapse" id="Collapse_{{ full_name }}"  full_name="{{ full_name }}">
-            <div class="collapse-body">
-                {{ content|safe }}
-            </div>
+<div class="collapse" id="Collapse_{{ full_name }}"
+     full_name="{{ full_name }}">
+    <div class="collapse-body">
+        {{ content|safe }}
+    </div>
 </div>
