--- a/src/View/FreeconfFlask/templates/elements/flash.html
+++ b/src/View/FreeconfFlask/templates/elements/flash.html
@@ -1,5 +1,6 @@
 <div class="alert alert-{{ category }}">
-    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <a href="#" class="close" data-dismiss="alert"
+       aria-label="close">&times;</a>
     {{ message }}
 </div>
 
