--- a/src/View/FreeconfFlask/templates/elements/modal.html
+++ b/src/View/FreeconfFlask/templates/elements/modal.html
@@ -1,16 +1,20 @@
-<div class="modal fade" id="Modal_{{ full_name }}"  full_name="{{ full_name }}" data-backdrop="static"  role="dialog">
+<div class="modal fade" id="Modal_{{ full_name }}" full_name="{{ full_name }}"
+     data-backdrop="static" role="dialog">
     <div class="modal-dialog modal-lg">
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <button type="button" class="close"
+                        data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Modal Header</h4>
             </div>
             <div class="modal-body">
                 {{ content|safe }}
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-default"
+                        data-dismiss="modal">Close
+                </button>
             </div>
         </div>
     </div>
