--- a/src/View/FreeconfFlask/templates/nav.html
+++ b/src/View/FreeconfFlask/templates/nav.html
@@ -3,32 +3,36 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <button type="button" class="navbar-toggle"
+                        data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img id="Logo" class="navbar-brand" src="{{ url_for('static', filename='img/ico.png') }}">
+                <img id="Logo" class="navbar-brand"
+                     src="{{ url_for('static', filename='img/ico.png') }}">
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
 
                     <li><a href="{{ url_for('configure') }}">Configure</a></li>
                     <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <a class="dropdown-toggle" data-toggle="dropdown"
+                           href="#">
                             Freeconf<span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="{{ url_for('setting') }}">Setting</a></li>
+                            <li><a href="{{ url_for('setting') }}">Setting</a>
+                            </li>
                             <li><a href="{{ url_for('about') }}">About</a></li>
                         </ul>
                     </li>
 
 
                 </ul>
-{#                <ul class="nav navbar-nav navbar-right">#}
-{#                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>#}
-{#                </ul>#}
+                {#                <ul class="nav navbar-nav navbar-right">#}
+                {#                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>#}
+                {#                </ul>#}
             </div>
         </div>
     </nav>
