--- a/src/View/FreeconfFlask/templates/package/entries/section.html
+++ b/src/View/FreeconfFlask/templates/package/entries/section.html
@@ -1,13 +1,14 @@
 {% from 'elements/macros.html'  import help as help_button %}
 
-<div id="section_{{ full_name }}" class="panel {{ 'panel-danger' if inconsistent else 'panel-default' }}">
+<div id="section_{{ full_name }}"
+     class="panel {{ 'panel-danger' if inconsistent else 'panel-default' }}">
     <div class="panel-heading">
         <h2>
             {% if description %}
                 {{ help_button(label, description) }}
             {% endif %}
             {{ label }}
-    </h2>
+        </h2>
     </div>
     <div class="panel-body">
         <form class="form-horizontal" role="form">
