--- a/src/View/FreeconfFlask/templates/nav.html
+++ b/src/View/FreeconfFlask/templates/nav.html
@@ -30,9 +30,12 @@
 
 
                 </ul>
-                {#                <ul class="nav navbar-nav navbar-right">#}
-                {#                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>#}
-                {#                </ul>#}
+                <ul class="nav navbar-nav navbar-right">
+                <li>    <button type="button" class="btn btn-danger btn-sm"
+                                id="shutdown">
+                    <span class="glyphicon glyphicon-off"></span>
+                    </button></li>
+                </ul>
             </div>
         </div>
     </nav>
