--- a/src/View/FreeconfFlask/templates/nav.html
+++ b/src/View/FreeconfFlask/templates/nav.html
@@ -24,7 +24,8 @@
                         <ul class="dropdown-menu">
                             <li><a href="{{ url_for('setting') }}">Setting</a>
                             </li>
-                            <li><a href="{{ url_for('about') }}">About</a></li>
+                            <li><a href="{{ url_for('docu') }}">
+                                Documentation</a></li>
                         </ul>
                     </li>
 
