refaktoring a oprava chyby načítání popisku GUi

--- a/src/View/FreeconfFlask/templates/package/tabs.html
+++ b/src/View/FreeconfFlask/templates/package/tabs.html
@@ -1,7 +1,7 @@
 {% block tabs %}
     <nav id="tabs">
         {% if tabs %}
-            <h1>{{ package_name }}</h1>
+            <h1>{{ label }}</h1>
             <ul class="nav nav-pills nav-stacked">
                 {% for tab in tabs %}
                     <li>
